[package]
name = "ckb-vm-cli"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/nervosnetwork/ckb/blob/develop/Cargo.lock
ckb-vm = {version = "0.19.3", features = ["asm"]}
bytes = "0.5.4"
clap = "2.33.3"

