[package]
name = "ckb-vm-b-cli"
version = "0.2.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { git="https://github.com/nervosnetwork/ckb-vm.git", branch = "develop", rev = "4200360", features = ["asm"]}
bytes = "1"
clap = "2.33.3"
